# cogutil

./: ASSEMBLY_OPTIMIZATION_SUMMARY.md  CMakeLists.txt  ORCHESTRAL_ARCHITECT.md  README.md  asm_optimization_tests  asm_optimization_tests.cpp  asm_performance_demo  asm_performance_demo.cpp  cognitive_computing_demo  cognitive_computing_demo.cpp  enhanced_cognitive_demo  enhanced_cognitive_demo.cpp  test_tensor_integration  test_tensor_integration.cpp
.circleci/: config.yml
.github/workflows/: msvc.yml
docs/: cognitive-kernel-summary.md  cognitive-kernel-usage.md  orchestral-architecture.md
examples/: CMakeLists.txt
examples/agentic/: CMakeLists.txt  basic_demo.cc  cognitive_kernel_demo.cc  simple_agentic_demo.cc
opencog/: CMakeLists.txt
opencog/agentic/: CMakeLists.txt
opencog/agentic/attention/: AttentionAllocationEngine.cc  AttentionAllocationEngine.h  CMakeLists.txt
opencog/agentic/grammar/: CMakeLists.txt  TokenParsingAgent.cc  TokenParsingAgent.h
opencog/agentic/kernel/: AgenticKernel.cc  AgenticKernel.h  CMakeLists.txt  Link.cc  Link.h  Node.cc  Node.h  TensorMapper.cc  TensorMapper.h  TensorShape.cc  TensorShape.h  ggml_stub.c  ggml_stub.h
opencog/util/: asm_atomics.h  asm_optimizations.h  hashing.h  numeric.h
tests/agentic/: AgenticKernelUTest.cxxtest
